@@ -60,7 +60,7 @@ confspec = StringIO("""# NVDA Configuration File
 	maxLineLength = integer(default=100)
 	linesPerPage = integer(default=25)
 	reportVirtualPresentationOnFocusChanges = boolean(default=true)
-	updateContentDynamically = boolean(default=false)
+	updateContentDynamically = boolean(default=true)
 	reportLinks = boolean(default=true)
 	reportLists = boolean(default=true) 
 	reportListItems = boolean(default=true)
